--- a/MyTheatre.Web/Views/Home/CreateVideo.cshtml
+++ b/MyTheatre.Web/Views/Home/CreateVideo.cshtml
@@ -1,13 +1,13 @@
 @model MyTheatre.Web.ViewModels.VideoViewModel
 @{
-    ViewData["Title"] = "Create Video";
+    ViewData["Title"] = "Add Video";
 }
 
-<h2>Create Video</h2>
-<p>
-    <a class="btn btn-primary" asp-action="Index">Save</a>
-    <a class="btn btn-danger" asp-action="Index">Cancel</a>
-</p>
+<h2>Add Video</h2>
+    <div class="col-sm-offset-10">
+        <a class="btn btn-primary" asp-action="Index">Save</a>
+        <a class="btn btn-warning" asp-action="Index">Cancel</a>
+    </div>
 
 <form asp-action="CreateVideo">
     <div class="form-horizontal">
