--- a/MyTheatre.Web/Views/Shared/_Layout.cshtml
+++ b/MyTheatre.Web/Views/Shared/_Layout.cshtml
@@ -26,11 +26,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">My Theatre Entertainment</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">My Theatre</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Manage Movies</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Manage Videos</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2560 - Manage Movies</p>
+            <p>&copy; 2560 - My Theatre</p>
         </footer>
     </div>
 
