--- a/MyTheatre.Web/Views/Home/Index.cshtml
+++ b/MyTheatre.Web/Views/Home/Index.cshtml
@@ -24,8 +24,8 @@
         <td>
             <a asp-action="ViewVideo" asp-route-id="@item.Id">@item.Title</a>
         </td>
-        <td>@Html.DisplayFor(modelItem => item.Title)</td>
         <td>@Html.DisplayFor(modelItem => item.Plot)</td>
+        <td>@Html.DisplayFor(modelItem => item.ImagePath)</td>
         <td>
             <a asp-action="EditVideo" asp-route-id="@item.Id">Edit</a>
             <a asp-action="DeleteVideo" asp-route-id="@item.Id">Delete</a>
