added select genre on add video ui

--- a/MyTheatre.Web/Views/Genre/Index.cshtml
+++ b/MyTheatre.Web/Views/Genre/Index.cshtml
@@ -4,7 +4,7 @@
 <hr/>
 
   <div class="col-md-offset-11">
-        <a class="btn btn-primary" asp-action="CreateGenre" asp-controller="Genre">Add</a>
+        <a class="btn btn-primary" asp-action="CreateGenre" asp-controller="Genre">Add Genre</a>
   </div>
 
 <table class="table">
