--- a/MyTheatre.Web/Views/Genre/Index.cshtml
+++ b/MyTheatre.Web/Views/Genre/Index.cshtml
@@ -22,6 +22,9 @@
            <td>
                @Html.DisplayFor(modelItem => item.Name)
             </td>
+            <td>
+                <a asp-action="UpdateGenre" asp-route-id="@item.Id">Edit</a>
+            </td>
         </tr>
         }
     </tbody>
