--- a/MyTheatre.Web/Views/Home/EditVideo.cshtml
+++ b/MyTheatre.Web/Views/Home/EditVideo.cshtml
@@ -28,6 +28,13 @@
                 <span asp-validation-for="Plot" class="text-danger"></span>
             </div>
         </div>
+        <div class="form-group">
+           <label asp-for="GenreId" class="col-md-2 control-label"></label>
+           <div class="col-md-10">
+                <select asp-for="GenreId" class="form-control" asp-items="@(new SelectList(@ViewBag.Genres,"Id","Name"))"/>
+                <span asp-validation-for="GenreId" class="text-danger"></span>
+           </div>
+        </div>
     </div>
 </form>
 
