--- a/MyTheatre.Web/Views/Home/EditVideo.cshtml
+++ b/MyTheatre.Web/Views/Home/EditVideo.cshtml
@@ -31,7 +31,7 @@
         <div class="form-group">
            <label asp-for="GenreId" class="col-md-2 control-label"></label>
            <div class="col-md-10">
-                <select asp-for="GenreId" class="form-control" asp-items="@(new SelectList(@ViewBag.Genres,"Id","Name"))"/>
+                <select asp-for="GenreId" class="form-control" asp-items="@(new SelectList(@ViewBag.Genres,"Id","Name"))"></select>
                 <span asp-validation-for="GenreId" class="text-danger"></span>
            </div>
         </div>
