--- a/MyTheatre.Web/Views/Home/CreateVideo.cshtml
+++ b/MyTheatre.Web/Views/Home/CreateVideo.cshtml
@@ -12,13 +12,14 @@
         <input type="reset" class="btn btn-default" value="Cancel">
     </div>
     <div class="form-horizontal">
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="Title" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-        </div>    
+        </div>
         <div class="form-group">
             <label asp-for="Plot" class="col-md-2 control-label"></label>
             <div class="col-md-10">
