--- a/MyTheatre.Web/Views/Home/EditVideo.cshtml
+++ b/MyTheatre.Web/Views/Home/EditVideo.cshtml
@@ -10,36 +10,29 @@
     <input type="submit" value="Save" class="btn btn-primary" />
     <input type="reset"  value="Cancel" class="btn btn-default"/>
 </div>
-    <div class="form-horizontal">
-        <hr/>
-        <div class="text-danger"/>
-        <input type="hidden" asp-for="Id"/>
-        <div class="form-group">
-            <label asp-for="Title" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Plot" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Plot" class="form-control" />
-                <span asp-validation-for="Plot" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-           <label asp-for="GenreId" class="col-md-2 control-label"></label>
-           <div class="col-md-10">
-                <select asp-for="GenreId" class="form-control" asp-items="@(new SelectList(@ViewBag.Genres,"Id","Name"))"></select>
-                <span asp-validation-for="GenreId" class="text-danger"></span>
-           </div>
+<div class="form-horizontal">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <input type="hidden" asp-for="Id"/>
+    <div class="form-group">
+        <label asp-for="Title" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Title" class="form-control" />
+            <span asp-validation-for="Title" class="text-danger"></span>
         </div>
     </div>
+    <div class="form-group">
+        <label asp-for="Plot" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="Plot" class="form-control" />
+            <span asp-validation-for="Plot" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="GenreId" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <select asp-for="GenreId" class="form-control" asp-items="@(new SelectList(@ViewBag.Genres,"Id","Name"))"></select>
+            <span asp-validation-for="GenreId" class="text-danger"></span>
+        </div>
+    </div>
+</div>
 </form>
-
-@*
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
-*@
