--- a/MyTheatre.Web/Views/Home/CreateVideo.cshtml
+++ b/MyTheatre.Web/Views/Home/CreateVideo.cshtml
@@ -9,7 +9,7 @@
     <hr/>
     <div class="col-md-offset-10">
         <input type="submit" class="btn btn-primary" value="Save"/>
-        <input type="reset" class="btn btn-default" value="Cancel">
+        <a asp-action="Index" class="btn btn-default">Cancel</a>
     </div>
     <div class="form-horizontal">
         <div asp-validation-summary="All" class="text-danger"></div>
