--- a/MyTheatre.Web/Views/Home/EditVideo.cshtml
+++ b/MyTheatre.Web/Views/Home/EditVideo.cshtml
@@ -7,8 +7,8 @@
 
 <form asp-action="EditVideo">
 <div class="col-md-offset-10">
-    <input type="submit" value="Save" class="btn btn-primary" />
-    <input type="reset"  value="Cancel" class="btn btn-default"/>
+    <input type="submit" class="btn btn-primary" value="Save"  />
+      <a asp-action="Index" class="btn btn-default">Cancel</a>
 </div>
 <div class="form-horizontal">
     <div asp-validation-summary="All" class="text-danger"></div>
