--- a/MyTheatre.Web/Views/Home/ViewVideo.cshtml
+++ b/MyTheatre.Web/Views/Home/ViewVideo.cshtml
@@ -1,6 +1,8 @@
 @model MyTheatre.Web.ViewModels.VideoViewModel
 
+<h2>Video info</h2>
+<hr/>
 <h3>@Model.Title</h3>
-<div>@Model.Plot</div>
-
-<a asp-action="Index">Back to video list</a>
+<div class="col-md-offset-10">
+    <a asp-action="Index" class="btn btn-default">Done</a>
+</div>
